fix image base path

--- a/components/section-gallery.html
+++ b/components/section-gallery.html
@@ -32,7 +32,7 @@
   </div>
 
   <script>
-    const IMAGE_SRC_PREFIX = "../images/";
+    const IMAGE_SRC_PREFIX = "./images/";
     const VIS_APP_URL_PREFIX = "https://vga-team.github.io/app/?configUrl=";
     const VIS_URL_PREFIX = `${VIS_APP_URL_PREFIX}/gwf-vis_examples/`;
     const CODE_URL_PREFIX = "https://vga-team.github.io/gwf-vis_examples/";
