change about section on gwf-vis

--- a/components/section-about.html
+++ b/components/section-about.html
@@ -8,11 +8,11 @@
       are relying on hydrological models to understand and cope up with extreme
       events such as droughts and floods. The GWF-Vis library provides a set of
       APIs to create an interactive visual analytics dashboard to visualize
-      geospatial data such as the ones produced by hydrological models. GWF-Vis
-      is built on top of the
-      <a href="https://github.com/vga-team">VGA</a> platform and the GWF-Vis
+      geospatial data such as the ones produced by hydrological models. The GWF-Vis
       library (<a href="https://github.com/vga-team/gwf-vis_lib/wiki">Wiki</a>)
-      can be installed through a terminal or Jupyter Notebook.
+      can be installed through a terminal or Jupyter Notebook. Interested users may
+      refer to (<a href="https://github.com/vga-team">VGA</a>) for development
+      details.
     </p>
   </div>
 </template>
