modify config urls in gallery section

--- a/components/section-gallery.html
+++ b/components/section-gallery.html
@@ -34,8 +34,8 @@
   <script>
     const IMAGE_SRC_PREFIX = "./images/";
     const VIS_APP_URL_PREFIX = "https://vga-team.github.io/app/?configUrl=";
-    const VIS_URL_PREFIX = `${VIS_APP_URL_PREFIX}/gwf-vis_examples/`;
-    const CODE_URL_PREFIX = "https://vga-team.github.io/gwf-vis_examples/";
+    const EXAMPLES_URL_PREFIX = "https://vga-team.github.io/gwf-vis_examples/";
+    const VIS_URL_PREFIX = `${VIS_APP_URL_PREFIX}${EXAMPLES_URL_PREFIX}`;
 
     export default {
       data: {
@@ -45,28 +45,28 @@
             imageSrc: `${IMAGE_SRC_PREFIX}gdp.png`,
             imageAlt: "GDP",
             visHref: `${VIS_URL_PREFIX}gdp.vgaconf`,
-            codeHref: `${CODE_URL_PREFIX}gdp.html`,
+            codeHref: `${EXAMPLES_URL_PREFIX}gdp.html`,
           },
           {
             label: "Visualization for a MESH output",
             imageSrc: `${IMAGE_SRC_PREFIX}mesh.png`,
             imageAlt: "MESH",
             visHref: `${VIS_URL_PREFIX}mesh.vgaconf`,
-            codeHref: `${CODE_URL_PREFIX}mesh.html`,
+            codeHref: `${EXAMPLES_URL_PREFIX}mesh.html`,
           },
           {
             label: " Visualization for a SUMMA output",
             imageSrc: `${IMAGE_SRC_PREFIX}summa.png`,
             imageAlt: "SUMMA",
             visHref: `${VIS_URL_PREFIX}summa.vgaconf`,
-            codeHref: `${CODE_URL_PREFIX}summa.html`,
+            codeHref: `${EXAMPLES_URL_PREFIX}summa.html`,
           },
           {
             label: "A set of pins on a map (U15)",
             imageSrc: `${IMAGE_SRC_PREFIX}u15.png`,
             imageAlt: "U15",
             visHref: `${VIS_URL_PREFIX}u15.vgaconf`,
-            codeHref: `${CODE_URL_PREFIX}u15.html`,
+            codeHref: `${EXAMPLES_URL_PREFIX}u15.html`,
           },
           {
             label:
@@ -74,21 +74,21 @@
             imageSrc: `${IMAGE_SRC_PREFIX}stations.png`,
             imageAlt: "Canadian weather stations",
             visHref: `${VIS_URL_PREFIX}stations.vgaconf`,
-            codeHref: `${CODE_URL_PREFIX}stations.html`,
+            codeHref: `${EXAMPLES_URL_PREFIX}stations.html`,
           },
           {
             label: "Visualization for a Permafrost output (Contours)",
             imageSrc: `${IMAGE_SRC_PREFIX}permafrost.png`,
             imageAlt: "Permafrost",
             visHref: `${VIS_URL_PREFIX}permafrost.vgaconf`,
-            codeHref: `${CODE_URL_PREFIX}permafrost.html`,
+            codeHref: `${EXAMPLES_URL_PREFIX}permafrost.html`,
           },
           {
             label: "Visualization for GloRiC dataset",
             imageSrc: `${IMAGE_SRC_PREFIX}gloric.png`,
             imageAlt: "GloRiC",
             visHref: `${VIS_URL_PREFIX}gloric.vgaconf`,
-            codeHref: `${CODE_URL_PREFIX}gloric.html`,
+            codeHref: `${EXAMPLES_URL_PREFIX}gloric.html`,
           },
           {
             label:
