--- a/components/section-about.html
+++ b/components/section-about.html
@@ -14,5 +14,9 @@
       refer to (<a href="https://github.com/vga-team">VGA</a>) for development
       details.
     </p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/fh3nc7wasSI?si=tvSn5Ak_BFQbVuf9"
+      title="YouTube video player" frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   </div>
 </template>
