--- a/components/section-teams.html
+++ b/components/section-teams.html
@@ -59,7 +59,7 @@
                   },
                   {
                     name: "Kevin Schneider",
-                    title: "Department Head, Professor",
+                    title: "Professor",
                     profileHref:
                       "https://www.cs.usask.ca/people/faculty%20profiles/kevin-schneider.php",
                     at: CS_DEPARTMENT_USASK,
